--- a/gmosbook/src/assets/styles/main/main.scss
+++ b/gmosbook/src/assets/styles/main/main.scss
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: "Noto Sans TC", sans-serif;
+  font-family: "Inter", "Noto Sans TC", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
